--- a/webpack/package.json
+++ b/webpack/package.json
@@ -3,6 +3,8 @@
     "webpack": "^1.12.1"
   },
   "dependencies": {
+    "babel-core": "^5.8.23",
+    "babel-loader": "^5.3.2",
     "react": "^0.13.3"
   }
 }
